--- a/LechebnikProject/Views/AddMedicineWindow.xaml
+++ b/LechebnikProject/Views/AddMedicineWindow.xaml
@@ -2,23 +2,23 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:LechebnikProject.Helpers"
-        Title="Добавить препарат" Height="600" Width="400">
+        Title="ЛЕЧЕБНИК [окно добавления препарата]" Height="540" Width="960" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <local:RoleToVisibilityConverter x:Key="RoleToVisibilityConverter"/>
     </Window.Resources>
     <ScrollViewer>
         <StackPanel Margin="10">
-            <Label Content="Название:"/>
+            <Label Content="Препарат (название, лекарственная форма, вес/объём):"/>
             <TextBox Text="{Binding Name}"/>
-            <Label Content="Форма:"/>
+            <Label Content="Лекарственная форма:"/>
             <ComboBox ItemsSource="{Binding Forms}" SelectedItem="{Binding SelectedForm}"/>
-            <Label Content="Вес/объем:"/>
+            <Label Content="Вес/объем (введите в миллиграммах/миллилитрах):"/>
             <TextBox Text="{Binding WeightVolume}"/>
             <Label Content="Серийный номер:"/>
             <TextBox Text="{Binding SerialNumber}"/>
-            <Label Content="Применение при болезнях:"/>
+            <Label Content="Применение при болезнях (названия болезней, через запятую):"/>
             <TextBox Text="{Binding Usage}"/>
-            <Label Content="Действующее вещество:"/>
+            <Label Content="Действующее вещество (через запятую):"/>
             <TextBox Text="{Binding ActiveIngredient}"/>
             <Label Content="Способ применения:"/>
             <ComboBox ItemsSource="{Binding ApplicationMethods}" SelectedItem="{Binding SelectedApplicationMethod}"/>
@@ -30,15 +30,15 @@
             <ComboBox ItemsSource="{Binding Manufacturers}" DisplayMemberPath="Name" SelectedItem="{Binding SelectedManufacturer}"/>
             <Label Content="Поставщик:"/>
             <ComboBox ItemsSource="{Binding Suppliers}" DisplayMemberPath="Name" SelectedItem="{Binding SelectedSupplier}"/>
-            <Label Content="Количество на складе:"/>
+            <Label Content="Количество на складе (введите целое число):"/>
             <TextBox Text="{Binding StockQuantity}"/>
-            <Label Content="Требуется рецепт:"/>
+            <Label Content="Требуется рецепт (если требуется, поставьте отметку):"/>
             <CheckBox IsChecked="{Binding RequiresPrescription}"/>
-            <Label Content="Цена:"/>
+            <Label Content="Цена в рублях (отделите копейки запятой):"/>
             <TextBox Text="{Binding Price}"/>
             <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
-                <Button Content="Добавить" Command="{Binding AddCommand}" Width="100" Margin="0,0,10,0"/>
-                <Button Content="Отмена" Command="{Binding CancelCommand}" Width="100"/>
+                <Button Content="Добавить препарат" Command="{Binding AddCommand}" Width="300" Margin="0,0,10,0"/>
+                <Button Content="Отменить добавление препарата" Command="{Binding CancelCommand}" Width="300"/>
             </StackPanel>
         </StackPanel>
     </ScrollViewer>
