--- a/LechebnikProject/Views/AdminPanelWindow.xaml
+++ b/LechebnikProject/Views/AdminPanelWindow.xaml
@@ -1,11 +1,11 @@
 ﻿<Window x:Class="LechebnikProject.Views.AdminPanelWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Панель администратора" Height="300" Width="400">
+        Title="ЛЕЧЕБНИК [окно панели администратора]" Height="540" Width="960" WindowStartupLocation="CenterScreen">
     <StackPanel Margin="10">
-        <Button Content="Управление пользователями" Command="{Binding ManageUsersCommand}" Margin="0,0,0,10"/>
-        <Button Content="Управление препаратами" Command="{Binding ManageMedicinesCommand}" Margin="0,0,0,10"/>
-        <Button Content="Просмотр отчётов" Command="{Binding ViewReportsCommand}" Margin="0,0,0,10"/>
-        <Button Content="Назад" Command="{Binding GoBackCommand}"/>
+        <Button Content="Открыть управление пользователями" Command="{Binding ManageUsersCommand}" Margin="0,0,0,10"/>
+        <Button Content="Открыть управление препаратами" Command="{Binding ManageMedicinesCommand}" Margin="0,0,0,10"/>
+        <Button Content="Открыть управление отчётами" Command="{Binding ManageReportsCommand}" Margin="0,0,0,10"/>
+        <Button Content="Вернуться к главному меню" Command="{Binding GoBackCommand}"/>
     </StackPanel>
 </Window>
