--- a/LechebnikProject/Views/CartWindow.xaml
+++ b/LechebnikProject/Views/CartWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="LechebnikProject.Views.CartWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Корзина" Height="400" Width="600" WindowStartupLocation="CenterScreen">
+        Title="ЛЕЧЕБНИК [окно корзины]" Height="540" Width="960" WindowStartupLocation="CenterScreen">
     <Grid Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -9,22 +9,22 @@
         </Grid.RowDefinitions>
         <DataGrid Grid.Row="0" ItemsSource="{Binding CartItems}" AutoGenerateColumns="False" IsReadOnly="True">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Название" Binding="{Binding Medicine.Name}"/>
-                <DataGridTextColumn Header="Количество" Binding="{Binding Quantity}"/>
-                <DataGridTextColumn Header="Цена" Binding="{Binding Medicine.Price, StringFormat={}{0:C}}"/>
+                <DataGridTextColumn Header="Препарат (название, лекарственная форма, вес/объём)" Binding="{Binding Medicine.Name}"/>
+                <DataGridTextColumn Header="Приобретаемое количество" Binding="{Binding Quantity}"/>
+                <DataGridTextColumn Header="Цена в рублях" Binding="{Binding Medicine.Price, StringFormat={}{0:C}}"/>
                 <DataGridTemplateColumn>
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Content="Удалить" Command="{Binding DataContext.RemoveCommand, RelativeSource={RelativeSource AncestorType=Window}}" CommandParameter="{Binding}" Margin="5"/>
+                            <Button Content="Убрать" Command="{Binding DataContext.RemoveCommand, RelativeSource={RelativeSource AncestorType=Window}}" CommandParameter="{Binding}" Margin="5"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
-            <Button Content="Очистить" Command="{Binding ClearCommand}" Width="100" Height="30" Margin="5"/>
-            <Button Content="Оплатить" Command="{Binding CheckoutCommand}" Width="100" Height="30" Margin="5"/>
-            <Button Content="Назад" Command="{Binding GoBackCommand}" Width="100" Height="30" Margin="5"/>
+            <Button Content="Очистить список" Command="{Binding ClearCommand}" Width="200" Height="30" Margin="5"/>
+            <Button Content="Перейти к оплате" Command="{Binding CheckoutCommand}" Width="300" Height="30" Margin="5"/>
+            <Button Content="Вернуться к главному меню" Command="{Binding GoBackCommand}" Width="200" Height="30" Margin="5"/>
         </StackPanel>
     </Grid>
 </Window>
