--- a/LechebnikProject/Views/ContactAdminWindow.xaml
+++ b/LechebnikProject/Views/ContactAdminWindow.xaml
@@ -1,16 +1,18 @@
 ﻿<Window x:Class="LechebnikProject.Views.ContactAdminWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Связаться с администратором" Height="300" Width="400">
+        Title="ЛЕЧЕБНИК [окно связи с администратором]" Height="540" Width="960" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="0.5*"/>
+            <RowDefinition Height="2*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <TextBox Grid.Row="0" Text="{Binding MessageText, UpdateSourceTrigger=PropertyChanged}" Height="100" AcceptsReturn="True" Margin="10"/>
-        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
-            <Button Content="Отправить" Command="{Binding SendCommand}" Width="100" Margin="0,0,10,0"/>
-            <Button Content="Назад" Command="{Binding GoBackCommand}" Width="100"/>
+        <TextBox Grid.Row="2" Text="{Binding MessageText, UpdateSourceTrigger=PropertyChanged}" Height="auto" AcceptsReturn="True" Margin="10"/>
+        <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
+            <Button Content="Отправить сообщение" Command="{Binding SendCommand}" Width="300" Margin="0,0,10,0"/>
+            <Button Content="Вернуться к главному меню" Command="{Binding GoBackCommand}" Width="300"/>
         </StackPanel>
     </Grid>
 </Window>
