--- a/LechebnikProject/Views/LoginWindow.xaml
+++ b/LechebnikProject/Views/LoginWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="LechebnikProject.Views.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Авторизация" Height="300" Width="500" WindowStartupLocation="CenterScreen">
+        Title="ЛЕЧЕБНИК [окно авторизации]" MinHeight="270" Height="540" MinWidth="480" Width="960" WindowStartupLocation="CenterScreen">
     <Grid Margin="20" Background="#F0F0F0">
         <StackPanel>
             <TextBlock Text="Логин:" FontSize="14" Margin="0,0,0,5"/>
@@ -11,7 +11,7 @@
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,20,0,0">
                 <Button Content="Войти" Click="LoginButton_Click" Width="120" Height="30" Margin="0,0,10,0" Background="#4CAF50" Foreground="White"/>
                 <Button Content="Зарегистрироваться" Click="RegisterButton_Click" Width="120" Height="30" Margin="10,0,10,0" Background="#2196F3" Foreground="White"/>
-                <Button Content="Закрыть" Click="CloseButton_Click" Width="120" Height="30" Margin="10,0,0,0" Background="#F44336" Foreground="White"/>
+                <Button Content="Закрыть программу" Click="CloseButton_Click" Width="120" Height="30" Margin="10,0,0,0" Background="#F44336" Foreground="White"/>
             </StackPanel>
         </StackPanel>
     </Grid>
