--- a/LechebnikProject/Views/MainMenuWindow.xaml
+++ b/LechebnikProject/Views/MainMenuWindow.xaml
@@ -1,18 +1,18 @@
 ﻿<Window x:Class="LechebnikProject.Views.MainMenuWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Главное меню" Height="500" Width="600" WindowStartupLocation="CenterScreen">
+        Title="ЛЕЧЕБНИК [окно главного меню]" Height="540" Width="960" WindowStartupLocation="CenterScreen">
     <Grid Margin="20">
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Button Content="Список препаратов" Command="{Binding GoToMedicineListCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" Width="200" Height="30" Margin="0,5"/>
-            <Button Content="Корзина" Command="{Binding GoToCartCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" Width="200" Height="30" Margin="0,5"/>
-            <Button Content="Добавить препарат" Command="{Binding GoToAddMedicineCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" Width="200" Height="30" Margin="0,5"/>
-            <Button Content="Отчётность" Command="{Binding GoToReportsCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" Width="200" Height="30" Margin="0,5"/>
-            <Button Content="Список рецептов" Command="{Binding GoToPrescriptionsCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" Width="200" Height="30" Margin="0,5"/>
-            <Button Content="Профиль" Command="{Binding GoToProfileCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" Width="200" Height="30" Margin="0,5"/>
-            <Button Content="Связь с администратором" Command="{Binding GoToContactAdminCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" Width="200" Height="30" Margin="0,5"/>
-            <Button Content="Панель администратора" Command="{Binding GoToAdminPanelCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" Width="200" Height="30" Margin="0,5" Visibility="{Binding CurrentUser.Role, Converter={StaticResource RoleToVisibilityConverter}}"/>
-            <Button Content="Выход" Command="{Binding ExitCommand}" Width="200" Height="30" Margin="0,5"/>
+            <Button Content="Открыть список препаратов" Command="{Binding GoToMedicineListCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" Width="300" Height="30" Margin="0,5"/>
+            <Button Content="Открыть корзину" Command="{Binding GoToCartCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" Width="300" Height="30" Margin="0,5"/>
+            <Button Content="Добавить препарат" Command="{Binding GoToAddMedicineCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" Width="300" Height="30" Margin="0,5"/>
+            <Button Content="Просмотреть отчёты" Command="{Binding GoToReportsCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" Width="300" Height="30" Margin="0,5"/>
+            <Button Content="Открыть список зарегистрированных рецептов" Command="{Binding GoToPrescriptionsCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" Width="300" Height="30" Margin="0,5"/>
+            <Button Content="Открыть профиль" Command="{Binding GoToProfileCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" Width="300" Height="30" Margin="0,5"/>
+            <Button Content="Связаться с администратором" Command="{Binding GoToContactAdminCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" Width="300" Height="30" Margin="0,5"/>
+            <Button Content="Переход к панели администратора" Command="{Binding GoToAdminPanelCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" Width="300" Height="30" Margin="0,5" Visibility="{Binding CurrentUser.Role, Converter={StaticResource RoleToVisibilityConverter}}"/>
+            <Button Content="Закрыть программу" Command="{Binding ExitCommand}" Width="300" Height="30" Margin="0,5"/>
         </StackPanel>
     </Grid>
 </Window>
