--- a/LechebnikProject/Views/ManageUsersWindow.xaml
+++ b/LechebnikProject/Views/ManageUsersWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="LechebnikProject.Views.ManageUsersWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Управление пользователями" Height="400" Width="600">
+        Title="ЛЕЧЕБНИК [окно управления пользователями]" Height="540" Width="960" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -11,8 +11,8 @@
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
             <Button Content="Добавить" Command="{Binding AddUserCommand}" Width="100" Margin="5"/>
             <Button Content="Редактировать" Command="{Binding EditUserCommand}" Width="100" Margin="5"/>
-            <Button Content="Блокировать" Command="{Binding BlockUserCommand}" Width="100" Margin="5"/>
-            <Button Content="Назад" Command="{Binding GoBackCommand}" Width="100" Margin="5"/>
+            <Button Content="Блокировать/Разблокировать" Command="{Binding BlockUserCommand}" Width="200" Margin="5"/>
+            <Button Content="Вернуться к панели администратора" Command="{Binding GoBackCommand}" Width="250" Margin="5"/>
         </StackPanel>
     </Grid>
 </Window>
