--- a/LechebnikProject/Views/MedicineListWindow.xaml
+++ b/LechebnikProject/Views/MedicineListWindow.xaml
@@ -1,30 +1,34 @@
 ﻿<Window x:Class="LechebnikProject.Views.MedicineListWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Список препаратов" Height="600" Width="800" WindowStartupLocation="CenterScreen">
+        Title="ЛЕЧЕБНИК [окно списка препаратов]" Height="540" Width="960" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="10">
-            <TextBox Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" Width="200" Height="25"/>
-            <Button Content="Поиск" Command="{Binding SearchCommand}" Width="100" Height="25" Margin="5,0"/>
-        </StackPanel>
+        <Grid Grid.Row="0" Margin="5,5,5,5">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="4*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <TextBox Grid.Column="0" Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" Width="auto" Height="25"/>
+            <Button Grid.Column="1" Content="Поиск" Command="{Binding SearchCommand}" Width="auto" Height="25" Margin="5,0"/>
+        </Grid>
         <DataGrid Grid.Row="1" ItemsSource="{Binding Medicines}" AutoGenerateColumns="False" IsReadOnly="True">
-            <DataGrid.Columns>
+        <DataGrid.Columns>
                 <DataGridTextColumn Header="ID" Binding="{Binding MedicineId}"/>
-                <DataGridTextColumn Header="Название" Binding="{Binding Name}"/>
+                <DataGridTextColumn Header="Препарат (название, лекарственная форма, вес/объём)" Binding="{Binding Name}"/>
                 <DataGridTextColumn Header="Производитель" Binding="{Binding ManufacturerId}"/>
-                <DataGridTextColumn Header="Цена" Binding="{Binding Price}"/>
+                <DataGridTextColumn Header="Цена в рублях" Binding="{Binding Price}"/>
                 <DataGridTemplateColumn>
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
                                 <Button Content="Подробности" Command="{Binding DataContext.ViewDetailsCommand, RelativeSource={RelativeSource AncestorType=Window}}" CommandParameter="{Binding}" Margin="5"/>
-                                <Button Content="Добавить" Command="{Binding DataContext.AddToCartCommand, RelativeSource={RelativeSource AncestorType=Window}}" CommandParameter="{Binding}" Margin="5"/>
-                                <Button Content="По рецепту" Command="{Binding DataContext.AddToCartByPrescriptionCommand, RelativeSource={RelativeSource AncestorType=Window}}" CommandParameter="{Binding}" Margin="5"/>
+                                <Button Content="Добавить в корзину" Command="{Binding DataContext.AddToCartCommand, RelativeSource={RelativeSource AncestorType=Window}}" CommandParameter="{Binding}" Margin="5"/>
+                                <Button Content="Добавить в корзину по рецепту" Command="{Binding DataContext.AddToCartByPrescriptionCommand, RelativeSource={RelativeSource AncestorType=Window}}" CommandParameter="{Binding}" Margin="5"/>
                             </StackPanel>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
@@ -32,8 +36,8 @@
             </DataGrid.Columns>
         </DataGrid>
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
-            <Button Content="Корзина" Command="{Binding GoToCartCommand}" Width="100" Height="30" Margin="5"/>
-            <Button Content="Назад" Command="{Binding GoBackCommand}" Width="100" Height="30" Margin="5"/>
+            <Button Content="Добавить в корзину" Command="{Binding GoToCartCommand}" Width="300" Height="30" Margin="5"/>
+            <Button Content="Вернуться к главному меню" Command="{Binding GoBackCommand}" Width="300" Height="30" Margin="5"/>
         </StackPanel>
     </Grid>
 </Window>
