--- a/LechebnikProject/Views/PrescriptionsWindow.xaml
+++ b/LechebnikProject/Views/PrescriptionsWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="LechebnikProject.Views.PrescriptionsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Рецепты" Height="400" Width="600">
+        Title="ЛЕЧЕБНИК [окно списка зарегистрированных рецептов]" Height="540" Width="960" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -9,9 +9,9 @@
         </Grid.RowDefinitions>
         <DataGrid Grid.Row="0" ItemsSource="{Binding Prescriptions}" AutoGenerateColumns="True" IsReadOnly="True" SelectedItem="{Binding SelectedPrescription}"/>
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
-            <Button Content="Добавить" Command="{Binding AddPrescriptionCommand}" Width="100" Margin="0,0,10,0"/>
-            <Button Content="Редактировать" Command="{Binding EditPrescriptionCommand}" Width="100" Margin="0,0,10,0"/>
-            <Button Content="Назад" Command="{Binding GoBackCommand}" Width="100"/>
+            <Button Content="Зарегистрировать новый рецепт" Command="{Binding AddPrescriptionCommand}" Width="300" Margin="0,0,10,0"/>
+            <Button Content="Редактировать" Command="{Binding EditPrescriptionCommand}" Width="300" Margin="0,0,10,0"/>
+            <Button Content="Вернуться к главному меню" Command="{Binding GoBackCommand}" Width="300"/>
         </StackPanel>
     </Grid>
 </Window>
