--- a/LechebnikProject/Views/ProfileWindow.xaml
+++ b/LechebnikProject/Views/ProfileWindow.xaml
@@ -1,19 +1,25 @@
 ﻿<Window x:Class="LechebnikProject.Views.ProfileWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Профиль" Height="400" Width="400" WindowStartupLocation="CenterScreen">
+        Title="ЛЕЧЕБНИК [окно профиля]" Height="540" Width="960" WindowStartupLocation="CenterScreen">
     <Grid Margin="20">
         <StackPanel>
             <TextBlock Text="Фамилия:" Margin="0,0,0,5"/>
             <TextBox Text="{Binding CurrentUser.LastName}" Margin="0,0,0,10"/>
             <TextBlock Text="Имя:" Margin="0,0,0,5"/>
             <TextBox Text="{Binding CurrentUser.FirstName}" Margin="0,0,0,10"/>
+            <TextBlock Text="Отчество:" Margin="0,0,0,5"/>
+            <TextBox Text="{Binding CurrentUser.MiddleName}" Margin="0,0,0,10"/>
             <TextBlock Text="Телефон:" Margin="0,0,0,5"/>
             <TextBox Text="{Binding CurrentUser.PhoneNumber}" Margin="0,0,0,10"/>
             <TextBlock Text="Email:" Margin="0,0,0,5"/>
             <TextBox Text="{Binding CurrentUser.Email}" Margin="0,0,0,10"/>
-            <Button Content="Сохранить" Command="{Binding SaveCommand}" Width="100" Height="30" Margin="0,10"/>
-            <Button Content="Назад" Command="{Binding GoBackCommand}" Width="100" Height="30" Margin="0,10"/>
+            <TextBlock Text="Должность:" Margin="0,0,0,5"/>
+            <TextBox Text="{Binding CurrentUser.Position}" Margin="0,0,0,10"/>
+            <TextBlock Text="Адрес аптеки:" Margin="0,0,0,5"/>
+            <TextBox Text="{Binding CurrentUser.PharmacyAddress}" Margin="0,0,0,10"/>
+            <Button Content="Сохранить изменения" Command="{Binding SaveCommand}" Width="200" Height="30" Margin="0,10"/>
+            <Button Content="Вернуться к главному меню" Command="{Binding GoBackCommand}" Width="200" Height="30" Margin="0,10"/>
         </StackPanel>
     </Grid>
 </Window>
