--- a/LechebnikProject/Views/RegistrationWindow.xaml
+++ b/LechebnikProject/Views/RegistrationWindow.xaml
@@ -1,34 +1,36 @@
 ﻿<Window x:Class="LechebnikProject.Views.RegistrationWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Регистрация" Height="700" Width="500" WindowStartupLocation="CenterScreen">
+        Title="ЛЕЧЕБНИК [окно регистрации]" Height="540" Width="960" WindowStartupLocation="CenterScreen">
     <Grid Margin="20" Background="#F0F0F0">
-        <StackPanel>
-            <TextBlock Text="Фамилия:" FontSize="14" Margin="0,0,0,5"/>
-            <TextBox x:Name="LastNameTextBox" Margin="0,0,0,10" Height="25"/>
-            <TextBlock Text="Имя:" FontSize="14" Margin="0,0,0,5"/>
-            <TextBox x:Name="FirstNameTextBox" Margin="0,0,0,10" Height="25"/>
-            <TextBlock Text="Отчество:" FontSize="14" Margin="0,0,0,5"/>
-            <TextBox x:Name="MiddleNameTextBox" Margin="0,0,0,10" Height="25"/>
-            <TextBlock Text="Номер телефона:" FontSize="14" Margin="0,0,0,5"/>
-            <TextBox x:Name="PhoneNumberTextBox" Margin="0,0,0,10" Height="25"/>
-            <TextBlock Text="Email:" FontSize="14" Margin="0,0,0,5"/>
-            <TextBox x:Name="EmailTextBox" Margin="0,0,0,10" Height="25"/>
-            <TextBlock Text="Должность:" FontSize="14" Margin="0,0,0,5"/>
-            <TextBox x:Name="PositionTextBox" Margin="0,0,0,10" Height="25"/>
-            <TextBlock Text="Адрес аптеки:" FontSize="14" Margin="0,0,0,5"/>
-            <TextBox x:Name="PharmacyAddressTextBox" Margin="0,0,0,10" Height="25"/>
-            <TextBlock Text="Логин:" FontSize="14" Margin="0,0,0,5"/>
-            <TextBox x:Name="LoginTextBox" Margin="0,0,0,10" Height="25"/>
-            <TextBlock Text="Пароль:" FontSize="14" Margin="0,0,0,5"/>
-            <PasswordBox x:Name="PasswordBox" Margin="0,0,0,10" Height="25"/>
-            <TextBlock Text="Повторите пароль:" FontSize="14" Margin="0,0,0,5"/>
-            <PasswordBox x:Name="ConfirmPasswordBox" Margin="0,0,0,10" Height="25"/>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
-                <Button Content="Зарегистрироваться" Click="RegisterButton_Click" Width="120" Height="30" Margin="0,0,10,0" Background="#4CAF50" Foreground="White"/>
-                <Button Content="Войти" Click="LoginButton_Click" Width="120" Height="30" Margin="10,0,10,0" Background="#2196F3" Foreground="White"/>
-                <Button Content="Закрыть" Click="CloseButton_Click" Width="120" Height="30" Margin="10,0,0,0" Background="#F44336" Foreground="White"/>
+        <ScrollViewer>
+            <StackPanel>
+                <TextBlock Text="Фамилия:" FontSize="14" Margin="0,0,0,5"/>
+                <TextBox x:Name="LastNameTextBox" Margin="0,0,0,10" Height="25"/>
+                <TextBlock Text="Имя:" FontSize="14" Margin="0,0,0,5"/>
+                <TextBox x:Name="FirstNameTextBox" Margin="0,0,0,10" Height="25"/>
+                <TextBlock Text="Отчество (при наличии):" FontSize="14" Margin="0,0,0,5"/>
+                <TextBox x:Name="MiddleNameTextBox" Margin="0,0,0,10" Height="25"/>
+                <TextBlock Text="Номер телефона:" FontSize="14" Margin="0,0,0,5"/>
+                <TextBox x:Name="PhoneNumberTextBox" Margin="0,0,0,10" Height="25"/>
+                <TextBlock Text="Email:" FontSize="14" Margin="0,0,0,5"/>
+                <TextBox x:Name="EmailTextBox" Margin="0,0,0,10" Height="25"/>
+                <TextBlock Text="Должность:" FontSize="14" Margin="0,0,0,5"/>
+                <TextBox x:Name="PositionTextBox" Margin="0,0,0,10" Height="25"/>
+                <TextBlock Text="Адрес аптеки (город, улица, дом, строение (при наличии)):" FontSize="14" Margin="0,0,0,5"/>
+                <TextBox x:Name="PharmacyAddressTextBox" Margin="0,0,0,10" Height="25"/>
+                <TextBlock Text="Логин:" FontSize="14" Margin="0,0,0,5"/>
+                <TextBox x:Name="LoginTextBox" Margin="0,0,0,10" Height="25"/>
+                <TextBlock Text="Пароль:" FontSize="14" Margin="0,0,0,5"/>
+                <PasswordBox x:Name="PasswordBox" Margin="0,0,0,10" Height="25"/>
+                <TextBlock Text="Повторите пароль:" FontSize="14" Margin="0,0,0,5"/>
+                <PasswordBox x:Name="ConfirmPasswordBox" Margin="0,0,0,10" Height="25"/>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
+                    <Button Content="Зарегистрироваться" Click="RegisterButton_Click" Width="200" Height="30" Margin="0,0,10,0" Background="#4CAF50" Foreground="White"/>
+                    <Button Content="Войти" Click="LoginButton_Click" Width="200" Height="30" Margin="10,0,10,0" Background="#2196F3" Foreground="White"/>
+                    <Button Content="Закрыть программу" Click="CloseButton_Click" Width="200" Height="30" Margin="10,0,0,0" Background="#F44336" Foreground="White"/>
+                </StackPanel>
             </StackPanel>
-        </StackPanel>
+        </ScrollViewer>
     </Grid>
 </Window>
