--- a/LechebnikProject/Views/ContactAdminWindow.xaml
+++ b/LechebnikProject/Views/ContactAdminWindow.xaml
@@ -9,6 +9,17 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
+        <ListBox Grid.Row="1" ItemsSource="{Binding Messages}" Margin="10">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Background="{Binding SenderId, Converter={StaticResource SenderToColorConverter}}">
+                        <TextBlock Text="{Binding SenderLogin}" FontWeight="Bold"/>
+                        <TextBlock Text="{Binding SendDate, StringFormat=dd.MM.yyyy HH:mm}"/>
+                        <TextBlock Text="{Binding MessageText}"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
         <TextBox Grid.Row="2" Text="{Binding MessageText, UpdateSourceTrigger=PropertyChanged}" Height="auto" AcceptsReturn="True" Margin="10"/>
         <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
             <Button Content="Отправить сообщение" Command="{Binding SendCommand}" Width="300" Margin="0,0,10,0"/>
