--- a/LechebnikProject/Views/ClientLoginWindow.xaml
+++ b/LechebnikProject/Views/ClientLoginWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="LechebnikProject.Views.ClientLoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Авторизация клиента" Height="300" Width="400" WindowStartupLocation="CenterScreen">
+        Title="ЛЕЧЕБНИК [окно авторизации клиента]" Height="540" Width="960" WindowStartupLocation="CenterScreen">
     <Grid Margin="20">
         <StackPanel>
             <TextBlock Text="Логин:"/>
