--- a/LechebnikProject/Views/ClientRegisterWindow.xaml
+++ b/LechebnikProject/Views/ClientRegisterWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="LechebnikProject.Views.ClientRegisterWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Регистрация клиента" Height="500" Width="400" WindowStartupLocation="CenterScreen">
+        Title="ЛЕЧЕБНИК [окно регистрации клиента]" Height="540" Width="960" WindowStartupLocation="CenterScreen">
     <Grid Margin="20">
         <StackPanel>
             <TextBlock Text="Фамилия:"/>
