--- a/LechebnikProject/Views/ManageUsersWindow.xaml
+++ b/LechebnikProject/Views/ManageUsersWindow.xaml
@@ -2,13 +2,16 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="ЛЕЧЕБНИК [окно управления пользователями]" Height="540" Width="960" WindowStartupLocation="CenterScreen">
-    <Grid>
+    <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <TextBox Grid.Row="0" Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" Margin="10"/>
+        <StackPanel Grid.Row="0" Orientation="Horizontal">
+            <TextBlock Text="Поиск:" VerticalAlignment="Center"/>
+            <TextBox Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" Width="850" Margin="5" VerticalContentAlignment="Center"/>
+        </StackPanel>
         <DataGrid Grid.Row="1" ItemsSource="{Binding CombinedList}" AutoGenerateColumns="False" SelectedItem="{Binding SelectedItem}" IsReadOnly="True">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Тип" Binding="{Binding Type}"/>
@@ -19,9 +22,8 @@
                 <DataGridTextColumn Header="Скидка" Binding="{Binding Discount}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
+        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="5">
             <Button Content="Добавить" Command="{Binding AddUserCommand}" Width="100" Margin="5"/>
-            <Button Content="Редактировать" Command="{Binding EditUserCommand}" Width="100" Margin="5"/>
             <Button Content="Сменить роль" Command="{Binding ChangeRoleCommand}" Width="100" Margin="5"/>
             <Button Content="Блокировать/Разблокировать" Command="{Binding BlockUserCommand}" Width="200" Margin="5"/>
             <ComboBox Width="100" Margin="5" SelectedValue="{Binding SelectedDiscount}">
