--- a/LechebnikProject/Views/MedicineDetailsWindow.xaml
+++ b/LechebnikProject/Views/MedicineDetailsWindow.xaml
@@ -2,42 +2,42 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="ЛЕЧЕБНИК [окно деталей препарата]" Height="540" Width="960" WindowStartupLocation="CenterScreen">
-    <Grid Margin="20">
+    <Grid Margin="10">
         <ScrollViewer>
             <StackPanel>
-                <TextBlock Text="ID:"/>
+                <TextBlock Text="ID:" FontWeight="Bold"/>
                 <TextBlock Text="{Binding SelectedMedicine.MedicineId}"/>
-                <TextBlock Text="Название:"/>
+                <TextBlock Text="Название:" FontWeight="Bold"/>
                 <TextBlock Text="{Binding SelectedMedicine.Name}"/>
-                <TextBlock Text="Форма:"/>
+                <TextBlock Text="Форма:" FontWeight="Bold"/>
                 <TextBlock Text="{Binding SelectedMedicine.Form}"/>
-                <TextBlock Text="Вес/объем:"/>
+                <TextBlock Text="Вес/объем:" FontWeight="Bold"/>
                 <TextBlock Text="{Binding SelectedMedicine.WeightVolume}"/>
-                <TextBlock Text="Серийный номер:"/>
+                <TextBlock Text="Серийный номер:" FontWeight="Bold"/>
                 <TextBlock Text="{Binding SelectedMedicine.SerialNumber}"/>
-                <TextBlock Text="Применение:"/>
+                <TextBlock Text="Применение:" FontWeight="Bold"/>
                 <TextBlock Text="{Binding SelectedMedicine.Usage}"/>
-                <TextBlock Text="Действующее вещество:"/>
+                <TextBlock Text="Действующее вещество:" FontWeight="Bold"/>
                 <TextBlock Text="{Binding SelectedMedicine.ActiveIngredient}"/>
-                <TextBlock Text="Способ применения:"/>
+                <TextBlock Text="Способ применения:" FontWeight="Bold"/>
                 <TextBlock Text="{Binding SelectedMedicine.ApplicationMethod}"/>
-                <TextBlock Text="Агрегатное состояние:"/>
+                <TextBlock Text="Агрегатное состояние:" FontWeight="Bold"/>
                 <TextBlock Text="{Binding SelectedMedicine.AggregateState}"/>
-                <TextBlock Text="Тип:"/>
+                <TextBlock Text="Тип:" FontWeight="Bold"/>
                 <TextBlock Text="{Binding SelectedMedicine.Type}"/>
-                <TextBlock Text="Производитель:"/>
+                <TextBlock Text="Производитель:" FontWeight="Bold"/>
                 <TextBlock Text="{Binding SelectedMedicine.ManufacturerName}"/>
-                <TextBlock Text="Страна производителя:"/>
+                <TextBlock Text="Страна производителя:" FontWeight="Bold"/>
                 <TextBlock Text="{Binding SelectedMedicine.ManufacturerCountry}"/>
-                <TextBlock Text="Поставщик:"/>
+                <TextBlock Text="Поставщик:" FontWeight="Bold"/>
                 <TextBlock Text="{Binding SelectedMedicine.SupplierName}"/>
-                <TextBlock Text="Страна поставщика:"/>
+                <TextBlock Text="Страна поставщика:" FontWeight="Bold"/>
                 <TextBlock Text="{Binding SelectedMedicine.SupplierCountry}"/>
-                <TextBlock Text="Количество на складе:"/>
+                <TextBlock Text="Количество на складе:" FontWeight="Bold"/>
                 <TextBlock Text="{Binding SelectedMedicine.StockQuantity}"/>
-                <TextBlock Text="Требуется рецепт:"/>
+                <TextBlock Text="Требуется рецепт:" FontWeight="Bold"/>
                 <TextBlock Text="{Binding SelectedMedicine.RequiresPrescription, Converter={StaticResource BooleanToStringConverter}}"/>
-                <TextBlock Text="Цена:"/>
+                <TextBlock Text="Цена:" FontWeight="Bold"/>
                 <TextBlock Text="{Binding SelectedMedicine.Price, StringFormat={}{0:N2} ₽}"/>
                 <Button Content="Вернуться к списку препаратов" Command="{Binding GoBackCommand}" Width="250" Height="30" Margin="0,10"/>
             </StackPanel>
