--- a/LechebnikProject/Views/PrescriptionInputWindow.xaml
+++ b/LechebnikProject/Views/PrescriptionInputWindow.xaml
@@ -2,32 +2,34 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="ЛЕЧЕБНИК [окно продажи по рецепту]" Height="540" Width="960" WindowStartupLocation="CenterScreen">
-    <Grid Margin="20">
+    <Grid Margin="10">
         <ScrollViewer>
             <StackPanel>
-                <TextBlock Text="Серия рецепта:" Margin="0,0,0,5"/>
+                <TextBlock Text="Серия рецепта:" FontWeight="Bold" Margin="0,0,0,5"/>
                 <TextBox Text="{Binding Series}" Margin="0,0,0,10"/>
-                <TextBlock Text="Медицинское учреждение, выдавшее рецепт:" Margin="0,0,0,5"/>
+                <TextBlock Text="Медицинское учреждение, выдавшее рецепт:" FontWeight="Bold" Margin="0,0,0,5"/>
                 <TextBox Text="{Binding MedicalInstitution}" Margin="0,0,0,10"/>
-                <TextBlock Text="Фамилия пациента:" Margin="0,0,0,5"/>
+                <TextBlock Text="Фамилия пациента:" FontWeight="Bold" Margin="0,0,0,5"/>
                 <TextBox Text="{Binding PatientLastName}" Margin="0,0,0,10"/>
-                <TextBlock Text="Имя пациента:" Margin="0,0,0,5"/>
+                <TextBlock Text="Имя пациента:" FontWeight="Bold" Margin="0,0,0,5"/>
                 <TextBox Text="{Binding PatientFirstName}" Margin="0,0,0,10"/>
-                <TextBlock Text="Код МКБ-10:" Margin="0,0,0,5"/>
+                <TextBlock Text="Отчество пациента:" FontWeight="Bold" Margin="0,0,0,5"/>
+                <TextBox Text="{Binding PatientMiddleName}" Margin="0,0,0,10"/>
+                <TextBlock Text="Код МКБ-10:" FontWeight="Bold" Margin="0,0,0,5"/>
                 <TextBox Text="{Binding ICD10Code}" Margin="0,0,0,10"/>
-                <TextBlock Text="Количество разрешённых для продажи препаратов:" Margin="0,0,0,5"/>
+                <TextBlock Text="Количество разрешённых для продажи препаратов:" FontWeight="Bold" Margin="0,0,0,5"/>
                 <TextBox Text="{Binding Quantity}" Margin="0,0,0,10"/>
-                <TextBlock Text="Требуемая скидка:" Margin="0,0,0,5"/>
+                <TextBlock Text="Требуемая скидка:" FontWeight="Bold" Margin="0,0,0,5"/>
                 <ComboBox ItemsSource="{Binding DiscountTypes}" SelectedItem="{Binding DiscountType}" Margin="0,0,0,10"/>
-                <TextBlock Text="Фамилия врача:" Margin="0,0,0,5"/>
+                <TextBlock Text="Фамилия врача:" FontWeight="Bold" Margin="0,0,0,5"/>
                 <TextBox Text="{Binding DoctorLastName}" Margin="0,0,0,10"/>
-                <TextBlock Text="Имя врача:" Margin="0,0,0,5"/>
+                <TextBlock Text="Имя врача:" FontWeight="Bold" Margin="0,0,0,5"/>
                 <TextBox Text="{Binding DoctorFirstName}" Margin="0,0,0,10"/>
-                <TextBlock Text="Отчество врача (при наличии):" Margin="0,0,0,5"/>
+                <TextBlock Text="Отчество врача (при наличии):" FontWeight="Bold" Margin="0,0,0,5"/>
                 <TextBox Text="{Binding DoctorMiddleName}" Margin="0,0,0,10"/>
-                <TextBlock Text="Срок действия рецепта:" Margin="0,0,0,5"/>
+                <TextBlock Text="Срок действия рецепта:" FontWeight="Bold" Margin="0,0,0,5"/>
                 <DatePicker SelectedDate="{Binding ExpiryDate}" Margin="0,0,0,10"/>
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="5">
                     <Button Content="Подтвердить рецепт" Command="{Binding AddCommand}" Width="300" Margin="5"/>
                     <Button Content="Отменить подтверждение рецепта" Command="{Binding CancelCommand}" Width="300" Margin="5"/>
                 </StackPanel>
