--- a/LechebnikProject/Views/PrescriptionsWindow.xaml
+++ b/LechebnikProject/Views/PrescriptionsWindow.xaml
@@ -2,33 +2,40 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="ЛЕЧЕБНИК [окно списка зарегистрированных рецептов]" Height="540" Width="960" WindowStartupLocation="CenterScreen">
-    <Grid>
+    <Grid Margin="10">
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <DataGrid Grid.Row="0" ItemsSource="{Binding Prescriptions}" AutoGenerateColumns="False" IsReadOnly="True">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Серия" Binding="{Binding Series}"/>
-                <DataGridTextColumn Header="Учреждение" Binding="{Binding MedicalInstitution}"/>
-                <DataGridTextColumn Header="Фамилия пациента" Binding="{Binding PatientLastName}"/>
-                <DataGridTextColumn Header="Имя пациента" Binding="{Binding PatientFirstName}"/>
-                <DataGridTextColumn Header="Отчество пациента" Binding="{Binding PatientMiddleName}"/>
-                <DataGridTextColumn Header="Код МКБ-10" Binding="{Binding ICD10Code}"/>
-                <DataGridTextColumn Header="Количество" Binding="{Binding Quantity}"/>
-                <DataGridTextColumn Header="Тип скидки" Binding="{Binding DiscountType}"/>
-                <DataGridTextColumn Header="Фамилия врача" Binding="{Binding DoctorLastName}"/>
-                <DataGridTextColumn Header="Имя врача" Binding="{Binding DoctorFirstName}"/>
-                <DataGridTextColumn Header="Отчество врача" Binding="{Binding DoctorMiddleName}"/>
-                <DataGridTextColumn Header="Препарат" Binding="{Binding MedicineId}"/>
-                <DataGridTextColumn Header="Фармацевт" Binding="{Binding PharmacistId}"/>
-                <DataGridTextColumn Header="Срок действия" Binding="{Binding ExpiryDate, StringFormat=dd.MM.yyyy}"/>
-            </DataGrid.Columns>
-        </DataGrid>
-        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
-            <Button Content="Зарегистрировать новый рецепт" Command="{Binding AddPrescriptionCommand}" Width="300" Margin="0,0,10,0"/>
-            <Button Content="Редактировать" Command="{Binding EditPrescriptionCommand}" Width="300" Margin="0,0,10,0"/>
-            <Button Content="Вернуться к главному меню" Command="{Binding GoBackCommand}" Width="300"/>
+        <StackPanel Grid.Row="0" Orientation="Horizontal">
+            <TextBlock Text="Поиск:" VerticalAlignment="Center"/>
+            <TextBox Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" Width="850" Margin="5" VerticalContentAlignment="Center"/>
+        </StackPanel>
+        <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Visible">
+            <DataGrid ItemsSource="{Binding Prescriptions}" AutoGenerateColumns="False" IsReadOnly="True">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Серия" Binding="{Binding Series}"/>
+                    <DataGridTextColumn Header="Учреждение" Binding="{Binding MedicalInstitution}"/>
+                    <DataGridTextColumn Header="Фамилия пациента" Binding="{Binding PatientLastName}"/>
+                    <DataGridTextColumn Header="Имя пациента" Binding="{Binding PatientFirstName}"/>
+                    <DataGridTextColumn Header="Отчество пациента" Binding="{Binding PatientMiddleName}"/>
+                    <DataGridTextColumn Header="Код МКБ-10" Binding="{Binding ICD10Code}"/>
+                    <DataGridTextColumn Header="Количество" Binding="{Binding Quantity}"/>
+                    <DataGridTextColumn Header="Тип скидки" Binding="{Binding DiscountType}"/>
+                    <DataGridTextColumn Header="Фамилия врача" Binding="{Binding DoctorLastName}"/>
+                    <DataGridTextColumn Header="Имя врача" Binding="{Binding DoctorFirstName}"/>
+                    <DataGridTextColumn Header="Отчество врача" Binding="{Binding DoctorMiddleName}"/>
+                    <DataGridTextColumn Header="Препарат" Binding="{Binding MedicineId}"/>
+                    <DataGridTextColumn Header="Фармацевт" Binding="{Binding PharmacistId}"/>
+                    <DataGridTextColumn Header="Срок действия" Binding="{Binding ExpiryDate, StringFormat=dd.MM.yyyy}"/>
+                </DataGrid.Columns>
+            </DataGrid>
+        </ScrollViewer>
+        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="5">
+            <Button Content="Зарегистрировать новый рецепт" Command="{Binding AddPrescriptionCommand}" Width="300" Margin="5"/>
+            <Button Content="Редактировать" Command="{Binding EditPrescriptionCommand}" Width="300" Margin="5"/>
+            <Button Content="Вернуться к главному меню" Command="{Binding GoBackCommand}" Width="300" Margin="5"/>
         </StackPanel>
     </Grid>
 </Window>
