--- a/LechebnikProject/Views/AddMedicineWindow.xaml
+++ b/LechebnikProject/Views/AddMedicineWindow.xaml
@@ -38,7 +38,7 @@
             <TextBox Text="{Binding Price}"/>
             <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
                 <Button Content="Добавить препарат" Command="{Binding AddCommand}" Width="300" Margin="0,0,10,0"/>
-                <Button Content="Отменить добавление препарата" Command="{Binding CancelCommand}" Width="300"/>
+                <Button Content="Отменить добавление препарата" Command="{Binding GoToMainMenuCommand}" Width="300"/>
             </StackPanel>
         </StackPanel>
     </ScrollViewer>
