--- a/LechebnikProject/Views/CartWindow.xaml
+++ b/LechebnikProject/Views/CartWindow.xaml
@@ -33,7 +33,7 @@
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="5">
             <Button Content="Очистить список" Command="{Binding ClearCommand}" FontWeight="Bold" Width="300" Height="30" Margin="5"/>
             <Button Content="Перейти к оплате" Command="{Binding CheckoutCommand}" IsEnabled="{Binding CanCheckout}" FontWeight="Bold" Width="300" Height="30" Margin="5"/>
-            <Button Content="Вернуться к главному меню" Command="{Binding GoBackCommand}" FontWeight="Bold" Width="300" Height="30" Margin="5"/>
+            <Button Content="Вернуться к главному меню" Command="{Binding GoToMainMenuCommand}" FontWeight="Bold" Width="300" Height="30" Margin="5"/>
         </StackPanel>
     </Grid>
 </Window>
